# Toward-Modeling-Player-Specific-Chess-Behaviors

./: README.md  main.py  pyproject.toml  slurm_train.sh
config/: default.yml
src/core/: config.py  utils.py
src/data/: build_dataset.py  fetch_games.py  opening_stats.py  players_stats.py
src/evaluation/: compute_acc.py  compute_distances.py  compute_model_jsd.py  evaluate_mcts_params.py  evaluate_players.py  generate_mcts_heatmaps.py  match.py  tournament.py
src/features/: compute_vectors.py  umap.py
src/models/: autoencoder.py  batched_mcts.py  maia.py  mcts.py  player_style.py  pmn.py
src/training/: train_autoencoder.py  train_players.py  train_umap.py
src/ui/: app.py
src/ui/templates/: index.html
src/visualization/: graphics.py  plot_diff_heatmap.py  plot_test_heatmap.py  tables.py
